In Kontinent nur ein Todo hinzugefügt Welt remove(index 0) zu .removeFirst geändert Spieler einheiten bearbeitet: - Einheiten beim erstellen des Spielers = 0 - Wenn ein Land hinzugefügt wird, wird auch eine Einheit hinzugefügt (Achtung: ich habe hier erstmal nur an die Ersterstellung gedacht, wenn wir das benutzten zum kämpfen/erobern muss das ggfl geändert werden - Jede Runde neue Einheiten über Methode neueArmee